--- a/style.css
+++ b/style.css
@@ -1,37 +1,9 @@
-body {
-  height: auto;
-  margin: 0;
-  font-family: "Oswald", "bold", sans-serif;
-  color: aliceblue;
-  background-color: rgb(43, 52, 61);
-}
-
-.main {
-  background-image: url("images/banner.jpg");
-  background-attachment: fixed;
-  background-size: cover;
-}
-
-.element-navbar {
-  letter-spacing: 0.3em;
-  font-size: 20px;
-  padding: 20px;
-}
-
-.menu-lateral {
-  height: 100vh;
-  width: 350px;
-  transition: width 0.5s ease;
-}
-
-.accueil {
-  height: 100vh;
-  justify-content: center;
-  background-color: rgba(0, 0, 0, 0.5);
-}
-
 .couleur-prim {
   background-color: #21b2a6;
+}
+
+.couleur-sec-teinte-claire {
+  background-color: rgb(47, 56, 65);
 }
 
 .couleur-sec {
@@ -50,77 +22,161 @@ body {
   background-color: #505393;
 }
 
+.couleur-icone-1 {
+  color: #00ffcc;
+}
+
+.couleur-icone-2 {
+  color: #00f0ff;
+}
+
+.couleur-icone-3 {
+  color: #76ddff;
+  rotate: -45deg;
+  font-size: 2.35em;
+  padding-top: 20%;
+  padding-left: 0%;
+}
+
+body {
+  height: auto;
+  margin: 0;
+  font-family: "Open Sans", Helvetica, sans-serif;
+  letter-spacing: 0.125em;
+  color: #fff;
+  background-color: rgb(43, 52, 61);
+}
+
+.main {
+  background-image: url("images/banner.jpg");
+  background-attachment: fixed;
+  background-size: cover;
+}
+
+.navbar {
+  z-index: 1;
+}
+
+.h-navbar {
+  height: 63px;
+}
+
+.element-navbar {
+  letter-spacing: 0.3em;
+  font-size: 20px;
+  margin: 20px 20px 0 20px;
+  font-family: "Oswald", Helvetica, sans-serif;
+  z-index: 2;
+}
+
+.menu-lateral {
+  width: 350px;
+  z-index: 2;
+}
+
+.options-menu-lateral {
+  border-top: solid 1px rgba(0, 0, 0, 0.125);
+  margin: 0.5em 0 0 0;
+  padding: 0.5em 0 0 0;
+}
+
+.liens-menu-lateral {
+  color: inherit;
+  display: block;
+  font-size: 0.8em;
+  letter-spacing: 0.225em;
+}
+
+.accueil {
+  height: 100vh;
+  justify-content: center;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
 .contain-titre {
-  margin: 20vh 20%;
+  margin: 20vh 0;
   flex-direction: column;
   justify-content: center;
   width: 25%;
   height: 60vh;
 }
 
-.titre {
-  letter-spacing: 0.15em;
-  font-size: 26px;
-  font-weight: bold;
-  margin-left: 10%;
-}
-
-.doubleslignes::before, .doubleslignes::after {
-  transition-delay: 0.25s;
+h1::before, h1::after {
   background: #fff;
   content: "";
   display: block;
   height: 2px;
   width: 100%;
-  top: 0;
-  left: 0;
 }
 
-.doubleslignes {
+h1 {
+  display: inline-block;
   padding: 5%;
-  height: 15%;
   font-size: 3vw;
   letter-spacing: 0.225em;
-  margin-block-start: 0.83em;
-  margin-block-end: 0.83em;
-  margin-inline-start: 0px;
-  margin-inline-end: 0px;
-  border: 0;
-  vertical-align: baseline;
   line-height: 1.75em;
-  transition: transform 0.5s ease, opacity 0.5s ease;
-}
-
-.titresparagraphe {
-  margin-top: 10%;
-  margin-left: 10%;
-  font-size: 3vw;
-}
-
-.paragraphe {
-  margin-left: 10%;
-  margin-right: 10%;
-  font-size: 2vw;
-  width: 80%;
 }
 
 .presentation {
   letter-spacing: 0.225em;
-  text-align: center;
+  font-weight: 400;
 }
 
-.btnprincipal {
+h2 {
+  letter-spacing: 0.125em;
+  font-size: 1.225em;
+}
+
+h2::after {
+  background: rgba(0, 0, 0, 0.125);
+  content: "";
+  display: block;
+  height: 2px;
+  width: 100%;
+  margin-top: 5%;
+  margin-bottom: 5%;
+}
+
+.cadre-icone {
+  rotate: 45deg;
+  border: solid 2px rgba(0, 0, 0, 0.125);
+  border-radius: 3px;
+  height: 3.5em;
+  width: 3.5em;
+  font-size: 2.3vw;
+}
+
+.icone {
+  rotate: -45deg;
+  font-size: 2.35em;
+  padding: 20%;
+}
+
+h3 {
+  font-size: 1.225em;
+  letter-spacing: 0.225em;
+}
+
+.paragraphe {
+  font-size: 0.8em;
+}
+
+.bouton {
   border: none;
   height: 4vw;
   margin: 0 5vw;
   width: 15vw;
   border-radius: 3px;
   background-color: #ed4933;
-  font-family: "Oswald", "bold", sans-serif;
   font-size: 0.6em;
   color: white;
   font-weight: bold;
   letter-spacing: 0.425em;
+}
+
+.bouton-learn-more {
+  background-color: rgba(0, 0, 0, 0);
+  border: #fff 3px solid;
 }
 
 .tableau-escobar {
@@ -155,21 +211,50 @@ body {
   justify-content: center;
 }
 
-@media screen and (max-width: 950px) {
-  .sectionsimage {
+@media screen and (max-width: 1000px) {
+  .contain-titre {
+    width: 1000px;
+    margin: 10vh 15%;
+  }
+  .presentation {
+    font-size: 14px;
+    letter-spacing: 0.225em;
+  }
+  .accueil {
+    height: 50vh;
+  }
+  h1 {
+    font-size: 1.25em;
+  }
+  .titre-demonstration {
+    width: 80%;
+    margin-top: 0;
+    font-size: 1.1em;
+  }
+  .div-demonstration {
+    width: 100%;
+    padding-bottom: 10%;
+  }
+  .section-demonstration {
     flex-direction: column;
-  }
-  .contain-paragraphe {
-    width: 100%;
-  }
-  .image {
-    width: 100%;
-  }
-  .titresparagraphe {
     text-align: center;
   }
-  .paragraphe {
+  .tableau-escobar {
+    flex-direction: column;
     text-align: center;
+  }
+  .element-tableau {
+    width: 80%;
+    background-color: rgba(0, 0, 0, 0);
+  }
+  .element-tableau::after {
+    background: rgba(0, 0, 0, 0.125);
+    content: "";
+    display: block;
+    height: 2px;
+    width: 100%;
+    margin-top: 5%;
+    margin-bottom: 5%;
   }
 }
 
